force-app/main/default/objects/JwtSignerConfig__mdt/JwtSignerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for JWT signing and claim defaults.</description>
    <label>JWT Signer Config</label>
    <pluralLabel>JWT Signer Configs</pluralLabel>
</CustomObject>