force-app/main/default/objects/JwtSignerConfig__mdt/fields/CertificateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>CertificateDeveloperName__c</fullName>
    <label>Certificate Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>