force-app/main/default/objects/JwtSignerConfig__mdt/fields/FallbackRole__c.field-meta.xml
<CustomField>
    <fullName>FallbackRole__c</fullName>
    <label>Fallback Role</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>