force-app/main/default/objects/JwtSignerConfig__mdt/fields/TokenLifetimeSeconds__c.field-meta.xml
<CustomField>
    <fullName>TokenLifetimeSeconds__c</fullName>
    <label>Token Lifetime Seconds</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>